--- a/package.json
+++ b/package.json
@@ -8,14 +8,13 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
-    "bootstrap-icons": "^1.8.3",
-    "multiselect-react-dropdown": "^2.0.22",
     "node-sass": "^7.0.1",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
